5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1723_2502.log
== TEST (2019-05-13 09:31:30) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(25)
print(soma)
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:31:43) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(25)
print(soma)
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:33:05) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrd(25)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = sqrd(25)
NameError: name 'sqrd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:33:35) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

#while(i <= fim):
	soma = sqrt(
print(soma)
-- ERROR:
File "XXXX", line 9
    soma = sqrt(
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:33:48) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

#while(i <= fim):
soma = sqrt(25)
print(soma)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:33:56) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

#while(i <= fim):
soma = sqrt(25)
print(soma)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:33:58) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

#while(i <= fim):
soma = sqrt(25)
print(soma)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:34:00) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

#while(i <= fim):
soma = sqrt(25)
print(soma)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:34:12) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

#while(i <= fim):
soma = sqrt(25)
print(soma)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:36:41) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*((1/i*2+1)*(1**-i))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = sqrt(12)*((1/i*2+1)*(1**-i))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:42:55) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = soma sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))
print(soma)
-- ERROR:
File "XXXX", line 9
    soma = soma sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:43:21) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = soma sqrd(12)*((1/((2*i)+1)*3**i)*(1**-i))
print(soma)
-- ERROR:
File "XXXX", line 9
    soma = soma sqrd(12)*((1/((2*i)+1)*3**i)*(1**-i))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:46:08) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))
print(soma)
-- ERROR:
File "XXXX", line 9
    soma = soma sqrd(12)*((1/((2*i)+1)*3**i)*(1**-i))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:46:31) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))

print(soma)
-- ERROR:
File "XXXX", line 9
    soma = soma sqrd(12)*((1/((2*i)+1)*3**i)*(1**-i))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:47:37) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))
	i = i + 1

print(soma)
-- OUTPUT:
9740.55887010806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:49:10) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 3.4641016151377544
2 3.4641016151377544
3 6.235382907247958
4 13.361534801245623
5 31.17691453623979
6 76.52515386167948
7 194.25615980272485
8 505.06601548708466
9 1336.9394527599297
10 3588.626952145074
11 9740.55887010806
9740.55887010806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:49:52) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = soma + sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 3.4641016151377544
2 6.928203230275509
3 13.163586137523467
4 26.525120938769092
5 57.702035475008884
6 134.22718933668835
7 328.48334913941324
8 833.5493646264979
9 2170.4888173864274
10 5759.115769531501
11 15499.674639639561
15499.674639639561
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:50:08) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = soma - sqrt(12)*((1/((2*i)+1)*3**i)*(1**-i))
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 -3.4641016151377544
2 -6.928203230275509
3 -13.163586137523467
4 -26.525120938769092
5 -57.702035475008884
6 -134.22718933668835
7 -328.48334913941324
8 -833.5493646264979
9 -2170.4888173864274
10 -5759.115769531501
11 -15499.674639639561
-15499.674639639561
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:50:37) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*factorial((1/((2*i)+1)*3**i)*(1**-i))
	i = i + 1
	print(i,soma)

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = sqrt(12)*factorial((1/((2*i)+1)*3**i)*(1**-i))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:51:43) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*((1/(factorial(2*i)+1)*3**i)*(1**-i))
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 1.7320508075688772
2 3.4641016151377544
3 1.2470765814495914
4 0.1297236388470449
5 0.006958960115725258
6 0.00023197102637440692
7 5.272070223070973e-06
8 8.69022566046737e-08
9 1.0862782075708296e-09
10 1.0649786348734132e-11
11 8.407726064790106e-14
8.407726064790106e-14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:54:30) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*(((-1**i)/((2*i)+1))*3**i)
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 -3.4641016151377544
2 -3.4641016151377544
3 -6.235382907247958
4 -13.361534801245623
5 -31.17691453623979
6 -76.52515386167948
7 -194.25615980272485
8 -505.06601548708466
9 -1336.9394527599297
10 -3588.626952145074
11 -9740.55887010806
-9740.55887010806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:54:56) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma = sqrt(12)*((((-1)**i)/((2*i)+1))*3**i)
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 3.4641016151377544
2 -3.4641016151377544
3 6.235382907247958
4 -13.361534801245623
5 31.17691453623979
6 -76.52515386167948
7 194.25615980272485
8 -505.06601548708466
9 1336.9394527599297
10 -3588.626952145074
11 9740.55887010806
9740.55887010806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:22:25) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma += sqrt(12)*((((-1)**i)/((2*i)+1))*3**i)
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 3.4641016151377544
2 0.0
3 6.235382907247958
4 -7.126151893997665
5 24.050762642242123
6 -52.474391219437365
7 141.7817685832875
8 -363.28424690379717
9 973.6552058561326
10 -2614.971746288941
11 7125.5871238191185
7125.5871238191185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:28:46) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma += sqrt(12)*((-1)**i)/( (2*i+1)*3**i)
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 3.4641016151377544
2 3.0792014356780038
3 3.156181471569954
4 3.13785289159568
5 3.1426047456630846
6 3.141308785462883
7 3.1416743126988376
8 3.141568715941784
9 3.141599773811506
10 3.14159051093808
11 3.1415933045030817
3.1415933045030817
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:29:13) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma += sqrt(12)*((-1)**i)/( (2*i+1)*3**i)
	i = i + 1
	print(i,soma)

print(soma)
-- OUTPUT:
1 3.4641016151377544
2 3.0792014356780038
3 3.156181471569954
4 3.13785289159568
5 3.1426047456630846
6 3.141308785462883
7 3.1416743126988376
8 3.141568715941784
9 3.141599773811506
10 3.14159051093808
11 3.1415933045030817
3.1415933045030817
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:30:17) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma += sqrt(12)*((-1)**i)/( (2*i+1)*3**i)
	i = i + 1

print(soma)
-- OUTPUT:
3.1415933045030817
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:30:56) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma += sqrt(12)*((-1)**i)/( (2*i+1)*3**i)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:31:05) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma += sqrt(12)*((-1)**i)/( (2*i+1)*3**i)
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.173692
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:32:01) 
-- CODE:
from math import *
x = int(input("valor das repeticoes: "))

soma = 0
i= 0
fim = x -1

while(i <= fim):
	soma += sqrt(12)*((-1)**i)/( (2*i+1)*3**i)
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.129025
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
